--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible">
+    <meta http-equiv="X-UA-Compatible" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
@@ -13,9 +13,9 @@
       <nav>
         <a href="">WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
         </ul>
       </nav>
       <ul>
@@ -26,66 +26,65 @@
     <main>
       <!-- Hero -->
       <section>
-        <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-        <button type="button">Request our service</button>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
       </section>
 
       <!--benefits-->
       <section>
-        <h2>Benefits</h2>
+        <h2>Переваги</h2>
         <ul>
           <li>
-            <h3>ATTENTION TO DETAILS</h3>
+            <h3>AУВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
-              We go into all the details and processes of your business to
-              develop a customized solution.
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
             </p>
           </li>
           <li>
-            <h3>PUNCTUALITY</h3>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
             <p>
-              With us, you can feel safe and secure. An important principle of
-              the company: respect your time and respect the agreed deadlines.
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
             </p>
           </li>
           <li>
-            <h3>PLANNING</h3>
+            <h3>ПЛАНУВАННЯ</h3>
             <p>
-              You will be able to observe and participate in every phase of
-              solution development and implementation.
+              Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>MODERN TECHNOLOGIES</h3>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
-              We use innovative tools to solve assigned tasks. It's time to
-              simplify work processes.
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
             </p>
           </li>
         </ul>
-
-        <!--Examples-->
-
-        <h2>What we do</h2>
+      </section>
+      <!--Examples-->
+      <section>
+        <h2>Чим ми займаємося</h2>
         <ul>
           <li>
             <img
               src="./images/keyboard.jpg"
-              alt="the man works with a keyboard"
+              alt="робота за клавіатурою"
               width="370"
             />
           </li>
           <li>
             <img
               src="./images/phone.jpg"
-              alt="the man works with the phone"
+              alt="робота на телефоні"
               width="370"
             />
           </li>
           <li>
             <img
               src="./images/tablet.jpg"
-              alt="the man works with a tablet"
+              alt="робота за планшетом"
               width="370"
             />
           </li>
@@ -93,7 +92,7 @@
       </section>
       <!--Team-->
       <section>
-        <h2>Our Team</h2>
+        <h2>Наша команда</h2>
         <ul>
           <li>
             <img
@@ -101,7 +100,7 @@
               alt="Product Designer"
               width="270"
             />
-            <h3>Игорь Демьяненко</h3>
+            <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -110,17 +109,17 @@
               alt="Frontend Developer"
               width="270"
             />
-            <h3>Ольга Репина</h3>
+            <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/marketing.jpg" alt="Marketing" width="270" />
-            <h3>Николай Тарасов</h3>
+            <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/uidesigner.jpg" alt="UI Designer" width="270" />
-            <h3>Михаил Ермаков</h3>
+            <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -129,10 +128,18 @@
     <!--footer-->
     <footer>
       <a href="">WebStudio</a>
-      <address>695 Park Ave, New York, NY 10065, United States</address>
-      <a href="mailto:info@example.com">info@example.com</a>
-      <a href="tel:+12127724150">+1 212-772-4150</a>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+12127724150">+1 212-772-4150</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
-
