--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>Переваги</h2>
         <ul>
           <li>
-            <h3>AУВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
